--- a/Surver2/app/src/main/AndroidManifest.xml
+++ b/Surver2/app/src/main/AndroidManifest.xml
@@ -2,15 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.surver2">
-
-    <!--定位权限-->
+    <!-- 定位权限 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <!--定位权限，Android 10 新增后台定位权限-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- 定位权限，Android 10 新增后台定位权限 -->
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-
-
-
 
     <application
         android:allowBackup="true"
@@ -19,25 +14,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-            >
+        <activity android:name=".Report2Activity"></activity>
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
         </activity>
-        <activity android:name="com.journeyapps.barcodescanner.CaptureActivity"
+        <activity
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="fullSensor"
-            tools:replace="screenOrientation"
-            ></activity>
-
-
-
-
-
+            tools:replace="screenOrientation" />
     </application>
 
 </manifest>
